# sample-nova-act-qa

./: .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: nova-act-qa.yml
src/nova_act_qa/: __init__.py
src/nova_act_qa/config/: __init__.py  app_config.py  decorators.py  exceptions.py
src/nova_act_qa/tests/: __init__.py  conftest.py  test_innovate_qa.py  test_nova_act.py
src/nova_act_qa/utils/: __init__.py  _types.py  directories.py  exceptions.py  nova_act.py
